erDiagram
    USER {
        ObjectId _id PK
        string username
        string email
        ObjectId[] roles FK
        ObjectId memberTier FK
        ObjectId customerId FK
    }

    ROLE {
        ObjectId _id PK
        string name
    }

    PERMISSION {
        ObjectId _id PK
        string name
        string resource
        string action
    }

    EMPLOYEE {
        ObjectId _id PK
        ObjectId user FK
        ObjectId primaryLocation FK
    }

    CUSTOMER {
        ObjectId _id PK
        string name
        string phone
        ObjectId userId FK
    }

    MEMBER_POLICY {
        ObjectId _id PK
        string name
        string code
    }

    LOCATION {
        ObjectId _id PK
        string code
        string name
        boolean isOnlineLocation
    }

    BANK_ACCOUNT {
        ObjectId _id PK
        ObjectId location FK
        string bankCode
        string bankAccount
    }

    CATEGORY {
        ObjectId _id PK
        string name
    }

    BRAND {
        ObjectId _id PK
        string name
    }

    USAGE_DEVICE {
        ObjectId _id PK
        string name
    }

    SUPPLIER {
        ObjectId _id PK
        string code
        string name
    }

    PRODUCT {
        ObjectId _id PK
        ObjectId category FK
        ObjectId brand FK
        ObjectId usageDevice FK
        string sku
        string name
    }

    PRODUCT_STOCK {
        ObjectId _id PK
        ObjectId product FK
        ObjectId location FK
        number quantity
    }

    CART {
        ObjectId _id PK
        ObjectId userId FK
    }

    SHIPPING_ADDRESS {
        ObjectId _id PK
        ObjectId userId FK
        string recipientName
    }

    ORDER {
        ObjectId _id PK
        string code
        ObjectId customer FK
        ObjectId customerProfile FK
        ObjectId location FK
        ObjectId createdBy FK
        string status
        string paymentStatus
    }

    PAYMENT_LINK {
        ObjectId _id PK
        ObjectId order FK
        number orderCode
        string status
    }

    STOCK_IN {
        ObjectId _id PK
        string code
        ObjectId supplier FK
        ObjectId location FK
        ObjectId createdBy FK
    }

    STOCK_OUT {
        ObjectId _id PK
        string code
        ObjectId location FK
        ObjectId createdBy FK
        ObjectId order FK
    }

    STOCK_CHECK {
        ObjectId _id PK
        string code
        ObjectId location FK
        ObjectId createdBy FK
    }

    STOCK_RETURN {
        ObjectId _id PK
        string code
        ObjectId stockIn FK
        ObjectId location FK
        ObjectId createdBy FK
    }

    BATTERY_TRADE_IN {
        ObjectId _id PK
        ObjectId userId FK
        ObjectId productId FK
        ObjectId locationId FK
        string status
    }

    SESSION {
        ObjectId _id PK
        ObjectId userId FK
        string refreshToken
    }

    PASSWORD_RESET {
        ObjectId _id PK
        ObjectId userId FK
        string token
    }

    EMAIL_VERIFICATION {
        ObjectId _id PK
        ObjectId userId FK
        string code
    }

    ACTIVITY_LOG {
        ObjectId _id PK
        ObjectId userId FK
        string action
        string resource
    }

    ROLE }o--o{ USER : assigned
    MEMBER_POLICY ||--o{ USER : tier
    USER ||--o| CUSTOMER : linked
    USER ||--o| EMPLOYEE : profile
    LOCATION ||--o{ EMPLOYEE : works_at
    LOCATION ||--o{ BANK_ACCOUNT : has

    CATEGORY ||--o{ PRODUCT : classifies
    BRAND ||--o{ PRODUCT : brands
    USAGE_DEVICE ||--o{ PRODUCT : used_for
    PRODUCT ||--o{ PRODUCT_STOCK : stock
    LOCATION ||--o{ PRODUCT_STOCK : stored_at

    USER ||--|| CART : owns
    USER ||--o{ SHIPPING_ADDRESS : saves

    USER ||--o{ ORDER : customer
    CUSTOMER ||--o{ ORDER : profile
    LOCATION ||--o{ ORDER : placed_at
    USER ||--o{ ORDER : created_by
    ORDER ||--o| PAYMENT_LINK : payment

    SUPPLIER ||--o{ STOCK_IN : provides
    LOCATION ||--o{ STOCK_IN : in_at
    USER ||--o{ STOCK_IN : creates

    LOCATION ||--o{ STOCK_OUT : out_at
    USER ||--o{ STOCK_OUT : creates
    ORDER ||--o| STOCK_OUT : from_order

    LOCATION ||--o{ STOCK_CHECK : check_at
    USER ||--o{ STOCK_CHECK : creates

    STOCK_IN ||--o{ STOCK_RETURN : return_from
    LOCATION ||--o{ STOCK_RETURN : return_at
    USER ||--o{ STOCK_RETURN : creates

    USER ||--o{ BATTERY_TRADE_IN : request_by
    PRODUCT ||--o{ BATTERY_TRADE_IN : product
    LOCATION ||--o{ BATTERY_TRADE_IN : process_at

    USER ||--o{ SESSION : has
    USER ||--o{ PASSWORD_RESET : reset
    USER ||--o{ EMAIL_VERIFICATION : verify
    USER ||--o{ ACTIVITY_LOG : logs
